<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FazTrex Customer</string>
    <string name="msg_content_footer" tools:ignore="TypographyDashes">Copyright &#169; 2019-20. All rights reserved by Yiron Technologies (P) Ltd</string>
    <string name="nav_header_title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_title_docket_booking">Docket Booking</string>
    <string name="nav_header_title_docket_details">Docket Details</string>
    <string name="nav_header_title_docket_tracking">Docket Tracking</string>
    <string name="nav_header_title_postcode_tracking">Postcode Tracking</string>
    <string name="nav_header_title_drs">Delivery Run Sheet</string>
    <string name="nav_header_title_drs_details">Delivery Run Sheet Details</string>
    <string name="nav_header_title_drs_docket_delivery_status">Update Delivery Status</string>
    <string name="nav_header_title_change_password">Change Password</string>
    <string name="nav_header_title_request_payment">Request Payment</string>
    <string name="nav_header_title_payment_details">Payment Details</string>
    <string name="err_msg_api_response_failure">Something went wrong.</string>
    <string name="msg_no_internet">Make sure your device is connected to the Internet.</string>
    <string name="msg_back_pressed">Press back again to exit</string>
    <string name="image_description" tools:ignore="DuplicateDefinition">This is image</string>
    <string name="pick_up_form">Pick Up Form</string>
    <string name="hyper_local_request">Hyper Local Request</string>
    <string name="pick_up_details">Pick Up Detail</string>
    <string name="consignee_information">Consignee Information</string>
    <string name="consignor_information">Consignor Information</string>
    <string name="product_information">Product Information</string>
    <string name="dimension_detail">Dimension Detail</string>
    <string name="nav_menu_title_customer">Customer</string>
    <string name="nav_menu_title_pick_up_request">Pick Up Request</string>
    <string name="nav_menu_title_docket_booking">Docket Booking</string>
    <string name="nav_menu_title_docket_tracking">Docket Tracking</string>
    <string name="nav_menu_title_MIS_report">MIS Report</string>
    <string name="nav_menu_title_bill">Bill</string>
    <string name="nav_menu_title_hyper_local_request">Hyper Local Request</string>
    <string name="nav_menu_title_notification">Notifications</string>
    <string name="default_notification_channel_id">Default Channel</string>
    <string name="pref_is_login" translatable="false">pref_is_login</string>
    <string name="pref_is_first_login" translatable="false">pref_is_first_login</string>
    <string name="pref_user_data" translatable="false">pref_user_data</string>
    <string name="dialog_title_authentication_failed">Authentication Failed</string>
    <string name="dialog_title_sign_out">Sign out?</string>
    <string name="dialog_msg_sign_out">Are you sure you want to sign out from the application?</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_msg_dimension_delete_confirmation">Are you sure you want to delete this dimension details?</string>
    <string name="dialog_msg_docket_delete_confirmation">Are you sure you want to delete this docket?</string>
    <string name="dialog_msg_payment_delete_confirmation">Are you sure you want to delete this payment details?</string>
    <string name="dialog_title_Delete">Delete</string>
    <string name="dialog_msg_delete_confirmation">Are you sure you want to delete?</string>
    <string name="key_item_position" translatable="false">key_item_position</string>
    <string name="key_is_edit" translatable="false">key_is_edit</string>
    <string name="key_read_only" translatable="false">key_read_only</string>
    <string name="key_user_id" translatable="false">key_user_id</string>
    <string name="key_email_address" translatable="false">key_email_address</string>
    <string name="key_verification_code" translatable="false">key_verification_code</string>
    <string name="key_docket_id" translatable="false">key_docket_id</string>
    <string name="key_drs_id" translatable="false">key_drs_id</string>
    <string name="key_data_drs" translatable="false">key_data_drs</string>
    <string name="key_data_drs_docket" translatable="false">key_data_drs_docket</string>
    <string name="key_data_mpesa_request" translatable="false">key_data_mpesa_request</string>
    <string name="btn_title_proceed">Proceed</string>
    <string name="btn_title_cancel">Cancel</string>
    <string name="btn_title_ok">OK</string>
    <string name="btn_title_submit">Submit</string>
    <string name="btn_title_go_to_settings">Settings</string>
    <string name="lblProductName">Product Name</string>
    <string name="lblBoxes">Boxes</string>
    <string name="lblLength">Length</string>
    <string name="lblWidth">Width</string>
    <string name="lblHeight">Height</string>
    <string name="lblActualWeight">Actual Weight</string>
    <string name="lblActualWeightPerBox">Actual Weight Per Box</string>
    <string name="lblVolumetricWeight">Volumetric Weight</string>
    <string name="ProductDetail">Product Detail</string>
    <string name="lblQty">Qty</string>
    <string name="lblAmount">Amount</string>
</resources>