<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlMainDialogDimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/size_300dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="@dimen/size_10dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvAddDimensionDetails"
                        style="@style/TextStyleBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:padding="@dimen/size_12dp"
                        android:text="@string/dimension_detail"
                        android:textColor="@color/colorWhite" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tnlBoxes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtBoxes"
                            style="@style/CustomEditextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lblBoxes"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tnlLength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtLength"
                            style="@style/CustomEditextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lblLength"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tnlWidth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtWidth"
                            style="@style/CustomEditextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lblWidth"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tnlHeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtHeight"
                            style="@style/CustomEditextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lblHeight"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tnlActualWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtActualWeight"
                            style="@style/CustomEditextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lblActualWeight"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tnlActualWeightPerBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtActualWeightPerBox"
                            style="@style/CustomEditextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:focusable="false"
                            android:hint="@string/lblActualWeightPerBox"
                            android:inputType="numberDecimal"
                            android:longClickable="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tnlVolumetricWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtVolumetricWeight"
                            style="@style/CustomEditextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:focusable="false"
                            android:hint="@string/lblVolumetricWeight"
                            android:inputType="numberDecimal"
                            android:longClickable="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="@dimen/size_300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlMainDialogDimension"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size_4dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_4dp"
                android:layout_weight="4"
                android:text="cancel"
                app:backgroundTint="@color/colorWhite"
                app:cornerRadius="@dimen/size_7dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddDialog"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_4dp"
                android:layout_weight="6"
                android:text="Add"
                app:cornerRadius="@dimen/size_7dp" />

        </LinearLayout>
    </RelativeLayout>
</layout>